<resources>
    <string name="app_name">HealthCare</string>
    <string name="sign_up">SIGN UP</string>
    <string name="text_sign_in">I already have an account</string>
    <string name="welcome">Welcome to HealtCare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_surname"><![CDATA[Name & Surname]]></string>
    <string name="email_password"><![CDATA[Email & Password]]></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">HealthCare </string>
    <string name="app_version">1.2</string>
    <string name="summary_support">Contact us by email.</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="url_faq">https://github.com/clemeMnt/HealtyApplication/issues</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://clementmarchais.fr/privacy_policy</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://clementmarchais.fr/terms_conditions</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">Message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="name_addresses"><![CDATA[Name & Addresses]]></string>
    <string name="addresses">Addresses</string>
    <string name="samuel">Samuel</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="_634236750">634236750</string>
    <string name="healt_parameters">Healt parameters</string>
    <string name="age">Age</string>
    <string name="_20">20</string>
    <string name="date_birthday">Date birthday</string>
    <string name="_00_00_00">00/00/00</string>
    <string name="prefix">Prefix</string>
    <string name="_33">+33</string>
    <string name="allergies_reactions"><![CDATA[Allergies & Reactions]]></string>
    <string name="blod_type">Blod type</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="_70_kg">70</string>
    <string name="_170_cm">170</string>
</resources>