<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment"
    android:theme="@style/Theme.HealtyApplication">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/name_addresses"
                android:textColor="@color/Deepblue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:hint="@string/name"
                android:textColor="@color/Lightgrey" />

            <EditText
                android:id="@+id/input_acc_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/samuel"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHighlight="@color/Red"
                android:textColorLink="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:hint="@string/addresses"
                android:textColor="@color/Lightgrey" />

            <EditText
                android:id="@+id/input_acc_addresses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="30dp"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHighlight="@color/Red"
                android:textColorLink="@color/white" />

              <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/phone_number"
                android:textColor="@color/Deepblue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:hint="@string/prefix"
                        android:textColor="@color/Lightgrey"
                        />

                    <EditText
                        android:id="@+id/input_acc_prefix"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="-10dp"
                        android:layout_marginEnd="30dp"
                        android:hint="@string/_33"
                        android:maxLines="1"
                        android:maxLength="3"
                        android:inputType="phone"
                        android:digits="0123456789+"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/Aqua"
                        android:textColorLink="@color/Lightgrey" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="195dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="@string/phone_number"
                        android:textColor="@color/Lightgrey"
                        />

                    <EditText
                        android:id="@+id/input_acc_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-10dp"
                        android:layout_marginEnd="30dp"
                        android:hint="@string/_634236750"
                        android:digits="0123456789"
                        android:maxLength="9"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/Aqua"
                        android:textColorLink="@color/Lightgrey" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/healt_parameters"
                android:textColor="@color/Deepblue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:hint="@string/age"
                        android:textColor="@color/Lightgrey"
                        />

                    <EditText
                        android:id="@+id/input_acc_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="-10dp"
                        android:layout_marginEnd="30dp"
                        android:hint="@string/_20"
                        android:maxLines="1"
                        android:maxLength="2"
                        android:inputType="number"
                        android:digits="0123456789+"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/Aqua"
                        android:textColorLink="@color/Lightgrey" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="195dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="@string/date_birthday"
                        android:textColor="@color/Lightgrey"
                         />

                    <EditText
                        android:id="@+id/input_acc_brth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-10dp"
                        android:layout_marginEnd="30dp"
                        android:hint="@string/_00_00_00"
                        android:maxLength="8"
                        android:inputType="date"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/Aqua"
                        android:textColorLink="@color/Lightgrey" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:hint="@string/allergies_reactions"
                android:textColor="@color/Lightgrey"
                 />

            <EditText
                android:id="@+id/input_acc_allergies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="30dp"
                android:hint=""
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHighlight="@color/Red"
                android:textColorLink="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:hint="@string/blod_type"
                android:textColor="@color/Lightgrey"
                />

            <EditText
                android:id="@+id/input_acc_blodtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="30dp"
                android:hint=""
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHighlight="@color/Red"
                android:textColorLink="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:hint="@string/weight"
                        android:textColor="@color/Lightgrey"
                        />

                    <EditText
                        android:id="@+id/input_acc_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="-10dp"

                        android:hint="@string/_70_kg"
                        android:maxLines="1"
                        android:maxLength="3"
                        android:inputType="number"
                        android:digits="0123456789"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/Aqua"
                        android:textColorLink="@color/Lightgrey" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Kg"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="-20dp"
                    android:layout_marginEnd="30dp" />

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="@string/height"
                        android:textColor="@color/Lightgrey"
                        />

                    <EditText
                        android:id="@+id/input_acc_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-10dp"
                        android:hint="@string/_170_cm"
                        android:maxLength="3"
                        android:inputType="number"
                        android:digits="0123456789"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/Aqua"
                        android:textColorLink="@color/Lightgrey" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="cm"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="-40dp"
                    android:layout_marginEnd="30dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:hint="Mimimun of calories"
                android:textColor="@color/Lightgrey"
                />

            <EditText
                android:id="@+id/input_acc_minCal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="30dp"
                android:hint="2000 KCal / Day"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHighlight="@color/Red"
                android:textColorLink="@color/white" />

            <Button
                android:id="@+id/button_acc"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/ic_input_custom"
                android:text="Modify"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>